sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:24: error: Unmatched closing brace '}' ignored here
}
^