sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {

var trie: Int = 0;
var k:Int =0
while (trie == 0)
{
trie = 1;  k = k +1
for(j <- 0 to  (getNombreValeurs()-2-k) )  {
 if(getValeur(j+1) < getValeur(j)) {
  
  echange(j+1,j); 

  trie = 0;
 
 }
	}
}
}
}

